--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -2,13 +2,8 @@ body
 {
 	background-color: #a50c0e;
 
-	margin-top: 0px;
-	margin-bottom: 0px;
-
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-left: 10%;
-	padding-right: 10%;
+	margin: 0px;
+	padding: 0px;
 }
 
 h1
@@ -67,26 +62,44 @@ a
 	color: #fffebb;
 }
 
-main
+header
 {
-	padding: 0px;
+	position: fixed;
+	top: 0;
+
+	height: 100px;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+main
+{	
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 100px;
 }
 
 footer
 {
 	font-size: small;
 
+	background-color: #fffebb;
 	color: #a84d01;
+	border-top: thin solid #cccb88;
 
-	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0px;
 
-	height: 100px;
-	width: 100%;
+	height: 50px;
+	width: 80%;
 }
 
-.left
+p
 {
-	background-color: #450001;
+	padding: 10px;
+	margin: 0px;
 }
 
 #wrapper
@@ -94,7 +107,10 @@ footer
 	background-color: #fffebb;
 	box-shadow: 20px 10px 50px #450001, -20px 10px 50px #450001;
 
-	height: 100vh;
+	width: 80%;
+
+	margin-right: auto;
+	margin-left: auto;
 }
 
 #navbar
@@ -122,13 +138,14 @@ footer
 
 .left
 {
-	width: 20%;
-	height: 200px;
+	width: 50%;
 	float: left;
+
+	border-right: solid thin #cccb88;
 }
 
 .right
 {
-	width: 50%;
-	float: right;
+	width: auto;
+	margin-left: 50%;
 }
