--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -71,13 +71,19 @@ header
 	width: 80%;
 	margin-left: 10%;
 	margin-right: 10%;
+
+	box-shadow: 20px 0px 50px #450001, -20px 0px 50px #450001;
 }
 
 main
 {	
+	width: 80%;
+
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 100px;
+
+	box-shadow: 20px 0px 50px #450001, -20px 0px 50px #450001;
 }
 
 footer
@@ -94,6 +100,13 @@ footer
 
 	height: 50px;
 	width: 80%;
+	
+	box-shadow: none, 20px 0px 50px #450001, -20px 0px 50px #450001;
+}
+
+#footercontent
+{
+	padding: 10px;
 }
 
 p
@@ -105,9 +118,8 @@ p
 #wrapper
 {
 	background-color: #fffebb;
-	box-shadow: 20px 10px 50px #450001, -20px 10px 50px #450001;
 
-	width: 80%;
+	width: 100%;
 
 	margin-right: auto;
 	margin-left: auto;
