--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -6,79 +6,68 @@ body
 	padding: 0px;
 }
 
-h1
-{
-	background-color: #36402c;
-	color: #fffebb;
-
-	padding: 5px;
-	padding-top: 15px;
-
-	margin-top: 0px;
-	margin-bottom: 0px;
-	
-	text-align: center;
-}
-
-nav
-{
-	background-color: #36402c;
-
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin: 0px;
-	
-	overflow: hidden;
-
-	text-align: center;
-}
-
-li a
-{
-	padding: 14px 16px;
-	margin-left: 0px;
-	margin-right: 0px;
-}
-
-li a:hover
-{
-	background-color: #dddc99;
-	color: #2e3323;
-}
-
-li a.active
-{
-	background-color: #fffebb;
-	color: #2e3323;
-}
-
-a
-{
-	border-left: solid 1px #cccccc;
-
-	text-decoration: none;
-	font-weight: bold;
-
-	color: #fffebb;
-}
-
-header
-{
-	position: fixed;
-	top: 0;
-
-	height: 100px;
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
-}
-
 main
 {	
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 100px;
+	padding-top: 120px; 
 }
+
+#wrapper
+{
+	background-color: #fffebb;
+	box-shadow: 20px 10px 50px #450001, -20px 10px 50px #450001;
+
+	width: 80%;
+
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#header {
+	position: fixed;
+	top: 0;
+    background-color: #36402c;
+	height: 120px;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+    }
+
+
+
+#header h1
+{
+	
+	color: #fffebb;
+	padding: 5px;
+	padding-top: 15px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	text-align: center;
+}
+
+#header img {
+    bottom: 0px;
+    position: absolute;
+    height: 70px;
+    width: 150px;
+    }
+
+
+
+#login {
+    width:100px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
+
+#login a {
+    color: #fffebb;
+    text-decoration: none;
+}
+
 
 footer
 {
@@ -94,36 +83,22 @@ footer
 
 	height: 50px;
 	width: 80%;
+
 }
 
-p
+footer a {
+    float: right;
+    }
+
+
+main p
 {
-	padding: 10px;
+	padding: 15px;
 	margin: 0px;
 }
 
-#wrapper
-{
-	background-color: #fffebb;
-	box-shadow: 20px 10px 50px #450001, -20px 10px 50px #450001;
 
-	width: 80%;
 
-	margin-right: auto;
-	margin-left: auto;
-}
-
-#navbar
-{
-	width: 100%;
-	height: 100%;
-}
-
-#navbar li
-{
-	display: inline;
-	float: right;
-}
 
 #imgplaceholder
 {
@@ -149,3 +124,68 @@ p
 	width: auto;
 	margin-left: 50%;
 }
+
+#navbar {
+    position: absolute;
+	right: 0px;
+    bottom: 0px;
+    width: 290px;
+    }
+
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+#navbar li {
+    float: left;
+    }
+
+
+li a, .button {
+    display: inline-block;
+    color: #fffebb;
+    text-align: center;
+    padding: 14px 22px;
+    text-decoration: none;
+  
+    }
+
+li a:hover, .dropdown:hover .button {
+    background-color: #a50c0e;
+    }
+
+li.dropdown {
+    display: inline-block;
+    }
+
+.menu {
+    display: none;
+    position: absolute;
+    background-color: #a50c0e;
+    min-width: 160px;
+  
+   }
+
+
+.menu a {
+    color: #fffebb;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    }
+
+li a:active {
+    background-color: black;
+    }
+
+.menu a:hover {
+    background-color: #36402c;
+    }
+
+.dropdown:hover .menu {
+    display: block;
+    }
