--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -27,18 +27,15 @@ main
 #header {
 	position: fixed;
 	top: 0;
-    background-color: #36402c;
+  background-color: #36402c;
 	height: 120px;
 	width: 80%;
 	margin-left: 10%;
 	margin-right: 10%;
-    }
-
-
+}
 
 #header h1
-{
-	
+{	
 	color: #fffebb;
 	padding: 5px;
 	padding-top: 15px;
@@ -47,29 +44,29 @@ main
 	text-align: center;
 }
 
-#header img {
-    bottom: 0px;
-    position: absolute;
-    height: 70px;
-    width: 150px;
-    }
-
-
-
-#login {
-    width:100px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    }
-
-#login a {
-    color: #fffebb;
-    text-decoration: none;
+#header img
+{
+  bottom: 0px;
+  position: absolute;
+  height: 70px;
+  width: 150px;
 }
 
 
 
+#login
+{
+  width:100px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+#login a
+{
+  color: #fffebb;
+  text-decoration: none;
+}
 
 main
 {	
@@ -77,7 +74,7 @@ main
 
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 100px;
+	padding-top: 120px;
 
 	box-shadow: 20px 0px 50px #450001, -20px 0px 50px #450001;
 }
@@ -109,26 +106,23 @@ main
 
 
 
-#footer  a {
-    float: right;
-    }
+#footer a
+{
+  float: right;
+}
 
 #wrapper
 {
 	background-color: #fffebb;
 
 	width: 100%;
-
-
 }
+
 main p
 {
 	padding: 15px;
 	margin: 0px;
 }
-
-
-
 
 #imgplaceholder
 {
@@ -155,50 +149,51 @@ main p
 	margin-left: 50%;
 }
 
-#navbar {
-    position: absolute;
+#navbar
+{
+  position: absolute;
 	right: 0px;
-    bottom: 0px;
-    width: 290px;
-    }
-
-#navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  bottom: 0px;
 }
 
-#navbar li {
-    float: left;
-    }
+#navbar ul
+{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+#navbar li
+{
+	float: left;
+}
 
 
-li a, .button {
-    display: inline-block;
-    color: #fffebb;
-    text-align: center;
-    padding: 14px 22px;
-    text-decoration: none;
-  
-    }
+li a, .button
+{
+	display: inline-block;
+	color: #fffebb;
+	text-align: center;
+	padding: 14px 22px;
+	text-decoration: none;
+}
 
 li a:hover, .dropdown:hover .button {
-    background-color: #a50c0e;
-    }
+background-color: #a50c0e;
+}
 
 li.dropdown {
     display: inline-block;
     }
 
-.menu {
-    display: none;
-    position: absolute;
-    background-color: #a50c0e;
-    min-width: 160px;
-  
-   }
-
+.menu
+{
+	display: none;
+	position: absolute;
+	background-color: #a50c0e;
+	min-width: 160px;
+}
 
 .menu a {
     color: #fffebb;
