--- a/G2/style/login.css
+++ b/G2/style/login.css
@@ -1,15 +1,36 @@
-#loginform
+.loginform
 {
 	width: 75%;
 
-	margin-left: auto;
-	margin-right: auto;
+	margin: 25px auto 25px auto;
 }
 
-#registerform
+.loginform label
 {
-	width: 75%;
+	padding-right: 10px;
+}
+
+.loginform td
+{
+	padding: 5px 0px;
+}
+
+.tabletitle
+{
+	text-align: center;
 	
-	margin-left: auto;
-	margin-right: auto;
+	padding-bottom: 10px;
+	border-bottom: solid thin #a50c0e;
+}
+
+.loginsubmit
+{
+	text-align: center;
+	border-top: solid thin #a50c0e;
+}
+
+.loginsubmit input
+{
+	color: white;
+	background-color: black;
 }
