fixed style affecting login.html and about_us.html

--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -238,6 +238,14 @@ nav li a:active {
 	width: 80%;
 }
 
+#team input {
+	float: right;
+	margin-right: 280px;
+	margin-bottom: 30px;
+}
+
+.team_row:nth-child(odd){background-color: #f2f2f2}
+
 .team_d{
 	border: 1px solid black;
 	height: 5px;
@@ -254,19 +262,12 @@ caption {
 	font-size: 1.5em
 }
 
-.team_row:nth-child(odd){background-color: #f2f2f2}
-
-input {
-	float: right;
-	margin-right: 280px;
-	margin-bottom: 30px;
-}
-
 .loginform
 {
 	width: 75%;
 
-	margin: 25px auto 25px auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .loginform label
@@ -276,7 +277,7 @@ input {
 
 .loginform td
 {
-	padding: 5px 0px;
+	padding: 10px 0px;
 }
 
 .logintitle
