--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -259,84 +259,99 @@ nav li.dropdown
 	max-width: 140px;
 }
 
-.menu a {
+.menu a
+{
     color: #fffebb;
     padding: 12px 20px;
     text-decoration: none;
     display: block;
     text-align: left;
-    }
+}
 
-nav li a:active {
+nav li a:active
+{
     background-color: black;
-    }
+}
 
-.menu a:hover {
+.menu a:hover
+{
     background-color: #36402c;
-    }
+}
 
-.dropdown:hover .menu {
-    display: block;
-    }
+.dropdown:hover .menu
+{
+  display: block;
+}
 	
-#comment textarea {
+#comment textarea
+{
 	margin: auto;
-    width: 50%;
-    border: 3px solid #000000;
-    padding: 10px;
+  width: 50%;
+  border: 3px solid #000000;
+  padding: 10px;
 }
 
 /* team selectors define style for the about_us page */
-#team {
-	margin: auto;
-	width: 80%;
+#team
+{
+  margin: auto;
+  width: 80%;
 }
 
-#team input {
-	float: right;
-	margin-right: 280px;
-	margin-bottom: 30px;
+#team input
+{
+  float: right;
+  margin-right: 280px;
+  margin-bottom: 30px;
 }
 
-.team_row:nth-child(odd){background-color: #f2f2f2}
-
-.team_d{
-	border: 1px solid black;
-	height: 5px;
-	padding: 10px;
+.team_row:nth-child(odd){
+  background-color: #f2f2f2
 }
 
-.team_h{
-	border: 1px solid black;
-	height: 5px;
-	padding: 10px;
+.team_d
+{
+  border: 1px solid black;
+  height: 5px;
+  padding: 10px;
 }
 
-caption {
-	font-size: 1.5em
+.team_h
+{
+  border: 1px solid black;
+  height: 5px;
+  padding: 10px;
+}
+
+caption
+{
+  font-size: 1.5em
 }
 
 /* styles selectors define style for the styles.html page */
-#stylesList {
-	width: 25%;
-	float: left;
-	border-right: solid thin #cccb88;
+#stylesList
+{
+  width: 25%;
+  float: left;
+  border-right: solid thin #cccb88;
 }
 
-#stylesList ul{
-	margin:auto;
-	width:80%;
-	padding-left:0;
+#stylesList ul
+{
+  margin:auto;
+  width:80%;
+  padding-left:0;
 }
 
 
-#stylesList li{
-	text-decoration: none;
-	list-style-type: none;
-
-	padding: 20px 18px;
-	background-color: #36402c;
-	width : 80%;
+#stylesList li
+{
+  text-decoration: none;
+  list-style-type: none;
+  
+  padding: 20px 18px;
+  background-color: #36402c;
+  width : 80%;
 }
 
 #stylesList a
@@ -354,13 +369,13 @@ caption {
 }
 
 /* sitemap selectors define style for elements in sitemap.html */
-#sitemap a {
+#sitemap a
+{
 	color: black;
-	padding-left: 5px;
-	
+	padding-left: 5px;	
 }
 
-#sitemap li {
+#sitemap li
+{
 	padding-top: 8px;
-
 }
