--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -291,7 +291,7 @@ nav li a:active
   padding: 10px;
 }
 
-/* team selectors define style for the about_us page */
+/* team selectors define style for the aboutus page */
 #team
 {
   margin: auto;
