--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -285,9 +285,8 @@ nav li a:active
 	
 #comment textarea
 {
-	margin: auto;
-  width: 50%;
-  border: 3px solid #000000;
+  margin: auto;
+  width: 90%;
   padding: 10px;
 }
 
@@ -321,6 +320,11 @@ nav li a:active
   border: 1px solid black;
   height: 5px;
   padding: 10px;
+}
+
+#comment 
+{
+	margin-left: 50px;
 }
 
 caption
