--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -202,12 +202,11 @@ footer a
 
 #imgplaceholder
 {
+
+	background-size: 100%;
 	width: 100%;
-	height: 300px;
-
+	height: 100%;
 	text-align: center;
-	padding-top: 50px;
-
 	border-bottom: solid thin #cccb88;
 }
 
