--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -7,6 +7,11 @@ body
 	padding: 0px;
 }
 
+body h3{
+	text-align: center;
+	margin-bottom: 0;
+}
+
 /* main and wrapper define the main content panel */
 main
 {	
@@ -190,23 +195,19 @@ footer a
 {
 	width: 50%;
 	float: left;
+	border-right: solid thin #cccb88;
 }
 
 #indexFacts
 {
 	width: auto;
 	margin-left: 50%;
-	
-	border-left: solid thin #cccb88;
 }
 
 #imgplaceholder
 {
-
-	background-size: 100%;
+	padding-top: 4px;
 	width: 100%;
-	height: 100%;
-	text-align: center;
 	border-bottom: solid thin #cccb88;
 }
 
