--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -30,6 +30,18 @@ main p
 	margin: 0px;
 }
 
+main h1 {
+	text-align: center;
+	font-size: large;
+
+	margin: 5px;
+	padding: 5px;
+
+	padding-bottom: 10px;
+
+	border-bottom: thin solid #cccb88;
+}
+
 #wrapper
 {
 	background-color: #fffebb;
@@ -41,11 +53,6 @@ main p
 	margin-right: auto;
 	margin-left: auto;
 	background-color: #fffebb;
-}
-
-#wrapper h1 {
-	padding: 20px;
-	padding-bottom: 0px;
 }
 
 /* header is a fixed region at the top of the page containing the logo and navigation */
@@ -407,32 +414,19 @@ caption
 	padding-top: 0;
 }
 
-#styleDescriptions h1 {
-	text-align: center;
-	font-size: large;
-
-	margin: 5px;
-	padding: 5px;
-
-	border-bottom: thin solid #cccb88;
-}
-
 /* about selectors define style for elements in abouthema.html */
-#aboutcontent h1
-{
-	text-align: center;
-	font-size: large;
-
-	margin: 5px;
-	padding: 5px;
-
-	border-bottom: thin solid #cccb88;
-}
 
 #aboutcontent p
 {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#hemamap
+{
+	display: block;
+
+	margin: 10px auto;
 }
 
 /* sitemap selectors define style for elements in sitemap.html */
