--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -17,8 +17,8 @@ main
 {	
 	width: 80%;
 
-	//font-family: 'Titillium Web', sans-serif;
-    font-family: 'Dosis', sans-serif;
+	font-family: 'Titillium Web', sans-serif;
+    //font-family: 'Dosis', sans-serif;
 
 	margin-left: auto;
 	margin-right: auto;
@@ -68,8 +68,8 @@ header {
  	background-color: #36402c;
  	color: #fffebb;
 
-	//font-family: 'Cinzel', serif;	
-    font-family: 'Tinos', serif;
+	font-family: 'Cinzel', serif;	
+    //font-family: 'Tinos', serif;
 
 
 	height: 120px;
