--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -371,11 +371,24 @@ caption {
 	padding-top: 0;
 }
 
-#hemamap {
+#hemainbcText
+{
+	width: 60%;
+	float: left;
+
+	padding-right: 20px;
+}
+
+#maps-embed
+{
 	display: block;
-	margin: 10px auto;
-	width: 50%;
-	height: 50%;
+
+	width: 30%;
+	height: 450px;
+
+	margin: 20px auto 10px 65%;
+
+	border: thin solid black;
 }
 
 /* sitemap selectors define style for elements in sitemap.html */
