updated login/reg forms to match BYu's database.

--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -405,3 +405,12 @@ caption {
 #sitemap .indentedlist {
 	list-style-position: inside;
 }
+
+
+#passwordReqs {
+	padding: 0;
+	margin: 0;
+
+	color: red;
+	font-size: 8pt;
+}
