--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -194,10 +194,9 @@ footer a {
 #imgplaceholder {
 	background-size: 100%;
 	width: 100%;
-	height: 200px;
 	text-align: center;
-	padding-top: 25px;
-	border-bottom: solid thin #cccb88;
+	padding-top: 10px;
+
 }
 
 /* nav, .menu and .dropdown define style for the navigation bar */
@@ -305,11 +304,11 @@ nav .dropdown:hover .menu {
 
 #teamwrapper {
 	margin: 0;
-	border-bottom: solid thin #cccb88;	
+	border-bottom: solid thin #cccb88;
 }
 
 #team {
-	width: 80%;
+	width: 62%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
@@ -345,6 +344,7 @@ nav .dropdown:hover .menu {
 	border: 1px solid black;
 	height: 5px;
 	padding: 10px;
+	text-align: center;
 }
 
 .team_h {
