--- a/G2/style/base.css
+++ b/G2/style/base.css
@@ -477,3 +477,20 @@ h4 {
 
 	background-color: #fffebb;
 }
+
+#summary {
+	width : 75%;
+	float: left;
+}
+
+#pic {
+	width: 24%;
+	float: right;
+}
+
+#pic img {
+	padding: 2px;
+	margin-top: 20%;
+	border-style: solid;
+	border-width: 1px;
+}
